# multi-repos-etl

./: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  data-model.md  demo_filter_combination.py  demo_filtering.py  demo_lead_time_analyzer.py  demo_lead_time_closed_prs.py  demo_period_grouping.py  demo_trend_statistics.py  pyproject.toml  pytest.ini  requirements.txt  test_ui_integration.py
.kiro/specs/review-lead-time-analysis/: design.md  requirements.md  tasks.md
docs/: dir-tree.md  gyomuyouken.md  integration_test_plan.md  kihonsekkei.md  syousaisekkei_fetch_data.md  test_environment_setup.md  wbs.md
src/analysis/: lead_time_analyzer.py  statistics_calculator.py
src/config/: settings.py
src/db/: database.py  models.py  schema.sql
src/github_api/: client.py  fetcher.py
src/gui/: app.py  data_manager.py
tests/: conftest.py
tests/config/: test_settings.py
tests/db/: test_database.py
tests/github_api/: test_client.py
tests/integration/: test_data_manager_filtering_integration.py  test_filter_combination_integration.py  test_lead_time_analyzer_integration.py  test_ui_integration.py
tests/integration/config/: test.env  test_config.yaml
tests/integration/db/: init_db.py
tests/mocks/config/: settings.py
tests/mocks/github_api/: client.py  responses.py  settings.py
tests/unit/analysis/: test_lead_time_analyzer.py  test_statistics_calculator.py
tests/unit/config/: test_settings.py
tests/unit/db/: test_database.py  test_database_filtering.py
tests/unit/github_api/: test_client.py  test_fetcher.py
tests/utils/: setup_test_env.py
(+2 files in other folders)
